add_executable (ex_critical_point_tracking_2d_regular ex_critical_point_tracking_2d_regular.cpp)
target_link_libraries (ex_critical_point_tracking_2d_regular ftk)

add_executable (ex_critical_point_tracking_2d_regular_distributed ex_critical_point_tracking_2d_regular_distributed.cpp)
target_link_libraries (ex_critical_point_tracking_2d_regular_distributed ftk)

add_executable (ex_critical_point_tracking_2d_regular_streaming ex_critical_point_tracking_2d_regular_streaming.cpp)
target_link_libraries (ex_critical_point_tracking_2d_regular_streaming ftk)

add_executable (ex_critical_point_tracking_2d_regular_distributed_streaming ex_critical_point_tracking_2d_regular_distributed_streaming.cpp)
target_link_libraries (ex_critical_point_tracking_2d_regular_distributed_streaming ftk)

add_executable (ex_critical_point_tracking_3d_regular ex_critical_point_tracking_3d_regular.cpp)
target_link_libraries (ex_critical_point_tracking_3d_regular ftk)

add_executable (ex_critical_point_tracking_3d_regular_distributed ex_critical_point_tracking_3d_regular_distributed.cpp)
target_link_libraries (ex_critical_point_tracking_3d_regular_distributed ftk)

add_executable (ex_critical_point_tracking_3d_regular_streaming ex_critical_point_tracking_3d_regular_streaming.cpp)
target_link_libraries (ex_critical_point_tracking_3d_regular_streaming ftk)

add_executable (ex_critical_point_tracking_3d_regular_distributed_streaming ex_critical_point_tracking_3d_regular_distributed_streaming.cpp)
target_link_libraries (ex_critical_point_tracking_3d_regular_distributed_streaming ftk)
